# pyproject.toml
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathPlanning"
version = "0.1.0"
description = "Path planning resources for UAV/UGV teams"
authors = [{ name = "Roger Fowler" }]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
